Fix: Overflow and text size/border

--- a/Front-End/src/pages/recommendation/Recommendation.css
+++ b/Front-End/src/pages/recommendation/Recommendation.css
@@ -1,37 +1,38 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
-.recom-container{
-        margin: 0 ;
-        padding: 1px;
-        width: 100%;
-  }
-  .recomendation{
-    font-family: 'Poppins';
-    overflow-y:scroll;
+.recom-container {
+    margin: 0;
+    padding: 1px;
+    width: 100%;
+}
+.recomendation {
+    font-family: "Poppins";
+    overflow-y: scroll;
     overflow-x: hidden;
     height: 400px;
     justify-content: center;
     align-items: center;
     margin: 20px;
-  }
-  p{  
+}
+.recommendation-text {
     font-size: 15px;
     line-height: 1.5;
-   
-    margin-bottom: 20px;
-  }
 
-  p:not(:first-child) {
+    margin-bottom: 20px;
+}
+
+.recommendation-text:not(:first-child) {
     border: 1px solid #ccc;
     padding: 5px;
     margin: 20px;
-  }
-  .links{
+}
+.links {
     /* display: flex;
     flex-direction: column;
     justify-content: space-between; */
     display: grid;
-    grid-template-columns: 1fr 1fr; 
-  }
-  .links p:first-child {
-    display: none;}
+    grid-template-columns: 1fr 1fr;
+}
+.links p:first-child {
+    display: none;
+}
